# gnome-shell-extension-weather

./: .gitignore  .project  AUTHORS  CONTRIBUTING.md  MANIFEST  Makefile.am  NEWS  README  README.md  TODO  applet-old.js  applet.js  autogen.sh  cinnamon-weather-settings  cinnamon-weather@mockturtl.gschema.xml  configure.ac  do-translation  install.sh  manifest  metadata.json  org.cinnamon.applets.cinnamon-weather@mockturtl.gschema.xml  org.cinnamon.applets.weather@mockturtl.gschema.xml  package  settings-schema.json  stylesheet.css  test  weather-extension-configurator.desktop  weather-extension-configurator.py
data/: Makefile.am  metadata.json.in  org.gnome.shell.extensions.weather.gschema.xml.in  stylesheet.css  weather-settings.desktop.in  weather-settings.ui
debian/: changelog  control  copyright  rules
locale/fr/LC_MESSAGES/: weather@venemo.net.mo
po/: LINGUAS  POTFILES.in  ar.po  bg.po  ca.po  cinnamon-weather@mockturtl.pot  cs.po  da.po  de.po  el.po  es.po  eu.po  fa.po  fi.po  fr.po  gnome-shell-extension-weather.pot  he.po  hr.po  hu.po  is.po  it.mo  it.po  ja.po  lt.po  lv.po  nb.po  nl.po  pl.po  pt.mo  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sk.po  sv.po  tr.po  uk.po  update.js  update.sh  (+4 more)
src/: Makefile.am  extension.js  metadata.json  metadata.json.in  org.gnome.shell.extensions.weather.gschema.xml.in  prefs.js  stylesheet.css  weather-settings.desktop.in  weather-settings.js.in  weather-settings.ui
weather@venemo.net/: extension.js  metadata.json  stylesheet.css
weather@venemo.net/locale/fr_FR/LC_MESSAGES/: weather.mo
weather@venemo.net/po/: messages.pot
