# Change these to modify how installation is performed
topextensiondir = $(datadir)/gnome-shell/extensions

uuid = weather@gnome-shell-extensions.gnome.org

extensiondir = $(topextensiondir)/$(uuid)

dist_extension_DATA = extension.js convenience.js prefs.js

nodist_extension_DATA = $(EXTRA_EXTENSION)
